refactor: implement domain-driven design
- Removed legacy Account, AccountRepository, Asset, and validation files.
- Introduced domain models for Account, Asset, Document, Email, Name, Order, Password, and UUID.
- Implemented use cases for account management: Signup, GetAccount, Deposit, Withdraw, PlaceOrder, and GetOrder.
- Created a new database connection interface and repository pattern for Account and Order.
- Updated API routes to use a dependency injection registry for better modularity.
- Added Express, Hapi, and Restify adapters for HTTP server abstraction.
- Updated tests to reflect new structure and removed obsolete tests.
- Added validation logic directly within domain models.

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,17 +11,20 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@hapi/hapi": "^21.4.3",
     "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "pg-promise": "^12.2.0",
+    "restify": "^11.1.0",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jest": "^29.5.12",
+    "@types/restify": "^8.5.12",
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
     "ts-jest": "^29.4.5",
